--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>Install Fest</h2>
-                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                <p class="lead">O InstallFest é uma atividade em que um grupo de participantes da organização do evento <br> promovem a instalação de softwares livres aos participantes do evento que trouxerem seus computadores. <br> É importante que os usuarios tenham feito um backup e a instalação dos software pode ser feita ou assistida por um <br> representante da organização do evento. O evento ocorrerá concomitante às palestras e aos minicursos.</p>
             </div>
 
             <div class="row">
@@ -257,7 +257,7 @@
     <div id="palestras" data-menu-offset="-100">
         <div class="container">
             <div class="get-started center wow fadeInDown">
-                <h2>Informação para você</h2>
+                <h2>Inscrições Abertas</h2>
                 <p class="lead">Não deixe de se informar e saber mais sobre o mundo do software livre</p>
                 <div class="request">
                     <h4><a href="#">Inscreva-se</a></h4>
@@ -273,25 +273,59 @@
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client1.png" class="img-circle" alt="">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
-                        <h4><span>-John Doe /</span>  Director of corlate.com</h4>
+                        <h3>Algumas palavras sobre a palestra.</h3>
+                        <h4><span>-Jõão Albuquerque /</span>  Licenciatura em Computação</h4>
                     </div>
                 </div>
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client2.png" class="img-circle" alt="">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
-                        <h4><span>-John Doe /</span>  Director of corlate.com</h4>
+                        <h3>Impresão 3D e o software livre: o impacto social e econômico.</h3>
+                        <h4><span>-Matheus Correa /</span> Licenciatura em Computação</h4>
                     </div>
                 </div>
                 <div class="col-md-4 wow fadeInDown">
                     <div class="clients-comments text-center">
                         <img src="images/client3.png" class="img-circle" alt="">
-                        <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</h3>
+                        <h3>Algumas palavras sobre a palestra</h3>
                         <h4><span>-John Doe /</span>  Director of corlate.com</h4>
                     </div>
                 </div>
             </div>
+
+            <div id="mini-cursos" data-menu-offset="-100">
+
+                <div class="clients-area center wow fadeInDown">
+                    <h2>Mini-Cursos</h2>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-4 wow fadeInDown">
+                        <div class="clients-comments text-center">
+                            <img src="images/client1.png" class="img-circle" alt="">
+                            <h3>Algumas palavras sobre a palestra.</h3>
+                            <h4><span>-Jõão Albuquerque /</span>  Licenciatura em Computação</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeInDown">
+                        <div class="clients-comments text-center">
+                            <img src="images/client2.png" class="img-circle" alt="">
+                            <h3>Impresão 3D e o software livre: o impacto social e econômico.</h3>
+                            <h4><span>-Matheus Correa /</span> Licenciatura em Computação</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-4 wow fadeInDown">
+                        <div class="clients-comments text-center">
+                            <img src="images/client3.png" class="img-circle" alt="">
+                            <h3>Algumas palavras sobre a palestra</h3>
+                            <h4><span>-John Doe /</span>  Director of corlate.com</h4>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </div><!--/.container-->
     </div>
     </section><!--/#feature-->
