--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 
-    <section id="palestras" style="background:#ff8e2a;">
+    <section id="palestras" style="/*background:#ff8e2a;*/">
       <div class="container">
       <div class="row">
         <div class="clients-area center wow fadeInDown">
@@ -198,6 +198,7 @@
                 </div>
             </div>
     </section><!--/#palestras-->
+    <hr>	
 
 
 	<section id="minicursos" class="transparent-bg">
@@ -232,10 +233,10 @@
             </div>
         </div><!--/.container-->
     </section><!--/#minicursos-->
-
+<hr>
 
     <section id="installfest">
-      <br /><br /><br />
+      
         <div class="container">
            <div class="center wow fadeInDown">
                 <h2>InstallFest</h2>
