--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 
 
-    <section id="palestras" style="/*background:#ff8e2a;*/">
+    <section id="palestras">
       <div class="container">
       <div class="row">
         <div class="clients-area center wow fadeInDown">
@@ -131,8 +131,7 @@
           <table style="margin: auto;">
                     <tr>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/wordpress.png" alt="" style="width:110px;" />
                                     <h4 class="negrito italico">Introdução ao Wordpress</h4>
                                     <h5>Marcus Bertoncello</h5>
@@ -141,8 +140,7 @@
                         </td>
                         <td style="width: 30px;"></td>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/3d-printer.png" alt="" style="width:110px;" />
                                     <h4 class="negrito italico">Software Livre na Impressão 3D</h4>
                                     <h5>Matheus Correa</h5>
@@ -151,8 +149,7 @@
                         </td>
                         <td style="width: 30px;"></td>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/visual-accessibility.png" alt="" style="width:110px;" />
                                     <h4 class="negrito italico">Software Livre na <br />Acessibilidade Visual</h4>
                                     <h5>José Eduardo Geremias</h5>
@@ -165,8 +162,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/storage.png" alt="" style="width:110px;" />
                                     <h4 class="negrito italico">Storage Livre</h4>
                                     <h5>Kleber Shimabucuro</h5>
@@ -175,8 +171,7 @@
                         </td>
                         <td style="width: 30px;"></td>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/programming.png" alt="" style="width:130px;" />
                                     <h4 class="negrito italico">Ferramentas para o ensino de <br />programação para crianças</h4>
                                     <h5>João Bosco</h5>
@@ -289,7 +284,37 @@
   </section><!--/#localizacao-->
 
 
-
+<section class="section" id="colaboracao">
+            <div class="clients-area center wow fadeInDown">
+                <h2>Colaboradores</h2>
+            </div>
+            <div class="container">
+              <div style="width:100%;">
+                <div style="position:relative; float: left; width: 50%;">
+                    <h4>Prof. Robertino Mendes Santiago Junior (Coordenador) - <a class="colaborador" href="mailto:robertino@ufpr.br">robertino@ufpr.br</a></h4>
+                    <h4>Prof. Carlos Roberto Beleti Junior (Vice-coordenador) - <a class="colaborador" href="mailto:carlosbeleti@ufpr.br">carlosbeleti@ufpr.br</a></h4>
+                    <h4>Prof. Adriano Rodrigues Mansanera - <a class="colaborador" href="mailto:adrianomansanera@ufpr.br">adrianomansanera@ufpr.br</a></h4>
+                    <h4>Prof. Alexandre Prusch Züge - <a class="colaborador" href="mailto:alexandrezuge@ufpr.br">alexandrezuge@ufpr.br</a></h4>
+                    <h4>Charles Masaharu Sakai - <a class="colaborador" href="mailto:sakai@ufpr.br">sakai@ufpr.br</a></h4>
+                    <h4>Fábio Antonio Gabriel - <a class="colaborador" href="mailto:fabio.gabriel@ufpr.br">fabio.gabriel@ufpr.br</a></h4>
+                    <h4>Prof. Jair da Silva - <a class="colaborador" href="mailto:jairsilva@ufpr.br">jairsilva@ufpr.br</a></h4>
+                    <h4>João Aparecido Martioro - <a class="colaborador" href="mailto:joaomartioro@gmail.com">joaomartioro@gmail.com</a></h4>
+                    <h4>João Bosco Cavalcante Albuquerque - <a class="colaborador" href="mailto:joao.br@live.com">joao.br@live.com</a></h4>
+                </div>
+                <div style="position:relative; float: left; width: 50%;">
+                    <h4>José Eduardo dos Santos Geremias Junior - <a class="colaborador" href="mailto:jose.junior943@ufpr.br">jose.junior943@ufpr.br</a></h4>
+                    <h4>Profa. Juliana Verga Shirabayashi - <a class="colaborador" href="mailto:juliana.verga@ufpr.br">juliana.verga@ufpr.br</a></h4>
+                    <h4>Kleber Kiyomassa Shimabucuro - <a class="colaborador" href="mailto:amperhigh@gmail.com">amperhigh@gmail.com</a></h4>
+                    <h4>Márcia Inês Schabarum Mikuska - <a class="colaborador" href="mailto:marcia.mikuska@ufpr.br">marcia.mikuska@ufpr.br</a></h4>
+                    <h4>Marcus Vinicius Bertoncello - <a class="colaborador" href="mailto:marcusbertoncello@ufpr.br">marcusbertoncello@ufpr.br</a></h4>
+                    <h4>Matheus Vinicius Correa - <a class="colaborador" href="mailto:matheusviniciuscorrea@gmail.com">matheusviniciuscorrea@gmail.com</a></h4>
+                    <h4>Prof. Rogério Ferreira da Silva - <a class="colaborador" href="mailto:rogerio.ferreira@ufpr.br">rogerio.ferreira@ufpr.br</a></h4>
+                    <h4>Rogério Sampaio Stubs - <a class="colaborador" href="mailto:ro_stubs@hotmail.com">ro_stubs@hotmail.com</a></h4>
+                    <h4>Vinicius Guidolin dos Santos - <a class="colaborador" href="mailto:viguidolin@gmail.com">viguidolin@gmail.com</a></h4>
+                </div>
+              </div>
+            </div>
+        </section><!--/#colaboracao-->
 
 
 	<section class="section" id="patrocinio">
