--- a/index.html
+++ b/index.html
@@ -180,8 +180,7 @@
                         </td>
                         <td style="width: 30px;"></td>
                         <td>
-                            <div style="text-align: center; width: 290px; height:200px; -moz-border-radius:7px;
-                                -webkit-border-radius:7px; border-radius:7px; background:#fff;padding:10px;">
+                            <div class="palestras">
                                     <img class="media-object" src="images/logos/linux.png" alt="" style="width:110px;" />
                                     <h4 class="negrito italico">O que é software livre?</h4>
                                     <h5>Robertino Mendes Santiago</h5>
@@ -305,7 +304,7 @@
                     <h4>José Eduardo dos Santos Geremias Junior - <a class="colaborador" href="mailto:jose.junior943@ufpr.br">jose.junior943@ufpr.br</a></h4>
                     <h4>Profa. Juliana Verga Shirabayashi - <a class="colaborador" href="mailto:juliana.verga@ufpr.br">juliana.verga@ufpr.br</a></h4>
                     <h4>Kleber Kiyomassa Shimabucuro - <a class="colaborador" href="mailto:amperhigh@gmail.com">amperhigh@gmail.com</a></h4>
-                    <h4>Márcia Inês Schabarum Mikuska - <a class="colaborador" href="mailto:marcia.mikuska@ufpr.br">marcia.mikuska@ufpr.br</a></h4>
+                    <h4>Profa. Márcia Maria Carlos - <a class="colaborador" href="mailto:marciacarlos1@gmail.com">marciacarlos1@gmail.com</a></h4>
                     <h4>Marcus Vinicius Bertoncello - <a class="colaborador" href="mailto:marcusbertoncello@ufpr.br">marcusbertoncello@ufpr.br</a></h4>
                     <h4>Matheus Vinicius Correa - <a class="colaborador" href="mailto:matheusviniciuscorrea@gmail.com">matheusviniciuscorrea@gmail.com</a></h4>
                     <h4>Prof. Rogério Ferreira da Silva - <a class="colaborador" href="mailto:rogerio.ferreira@ufpr.br">rogerio.ferreira@ufpr.br</a></h4>
